crates/alder-parse/src/expression/snapshots/alder_parse__expression__match___tests__error_bad_pattern.snap
---
source: crates/alder-parse/src/expression/match_.rs
description: "match x { +1 => a }"
---
Match(
    Arm(
        Pattern(
            Start(
                1,
                11,
            ),
            1,
            11,
        ),
        1,
        11,
    ),
    1,
    1,
)
