crates/alder-parse/src/expression/snapshots/alder_parse__expression__match___tests__error_guard.snap
---
source: crates/alder-parse/src/expression/match_.rs
description: "match x { n if => a }"
---
Match(
    Arm(
        Guard(
            Start(
                1,
                16,
            ),
            1,
            16,
        ),
        1,
        11,
    ),
    1,
    1,
)
