crates/alder-parse/src/expression/snapshots/alder_parse__expression__match___tests__error_missing_arrow_thin_arrow.snap
---
source: crates/alder-parse/src/expression/match_.rs
description: "match x { 1 -> a }"
---
Match(
    Arm(
        Arrow(
            1,
            13,
        ),
        1,
        11,
    ),
    1,
    1,
)
