crates/alder-parse/src/expression/snapshots/alder_parse__expression__match___tests__error_missing_body.snap
---
source: crates/alder-parse/src/expression/match_.rs
description: "match x { 1 => }"
---
Match(
    Arm(
        Body(
            Start(
                1,
                16,
            ),
            1,
            16,
        ),
        1,
        11,
    ),
    1,
    1,
)
