crates/alder-parse/src/expression/snapshots/alder_parse__expression__match___tests__error_of_keyword.snap
---
source: crates/alder-parse/src/expression/match_.rs
description: "match x of { 1 => a }"
---
Match(
    Open(
        1,
        9,
    ),
    1,
    1,
)
