crates/alder-parse/src/expression/snapshots/alder_parse__expression__match___tests__error_unclosed.snap
---
source: crates/alder-parse/src/expression/match_.rs
description: "match x { 1 => a"
---
Match(
    End(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 9,
            },
            boundary: Position {
                line: 1,
                column: 17,
            },
            unexpected: Position {
                line: 1,
                column: 17,
            },
        },
    ),
    1,
    1,
)
