crates/alder-parse/src/expression/snapshots/alder_parse__expression__match___tests__match_alternatives.snap
---
source: crates/alder-parse/src/expression/match_.rs
description: "match x { 1 | 2 | 3 => small, _ => big }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 41,
        },
    },
    value: Match {
        scrutinee: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 7,
                },
                end: Position {
                    line: 1,
                    column: 8,
                },
            },
            value: Var(
                "x",
            ),
        },
        arms: [
            MatchArm {
                patterns: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 11,
                            },
                            end: Position {
                                line: 1,
                                column: 12,
                            },
                        },
                        value: Number(
                            NumberLit {
                                value: 1.0,
                                text: "1",
                            },
                        ),
                    },
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 15,
                            },
                            end: Position {
                                line: 1,
                                column: 16,
                            },
                        },
                        value: Number(
                            NumberLit {
                                value: 2.0,
                                text: "2",
                            },
                        ),
                    },
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 19,
                            },
                            end: Position {
                                line: 1,
                                column: 20,
                            },
                        },
                        value: Number(
                            NumberLit {
                                value: 3.0,
                                text: "3",
                            },
                        ),
                    },
                ],
                guard: None,
                body: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 24,
                        },
                        end: Position {
                            line: 1,
                            column: 29,
                        },
                    },
                    value: Var(
                        "small",
                    ),
                },
            },
            MatchArm {
                patterns: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 31,
                            },
                            end: Position {
                                line: 1,
                                column: 32,
                            },
                        },
                        value: Anything,
                    },
                ],
                guard: None,
                body: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 36,
                        },
                        end: Position {
                            line: 1,
                            column: 39,
                        },
                    },
                    value: Var(
                        "big",
                    ),
                },
            },
        ],
    },
}
