crates/alder-parse/src/expression/snapshots/alder_parse__expression__match___tests__match_block_single_name_is_block.snap
---
source: crates/alder-parse/src/expression/match_.rs
description: "match x { _ => { y } }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 23,
        },
    },
    value: Match {
        scrutinee: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 7,
                },
                end: Position {
                    line: 1,
                    column: 8,
                },
            },
            value: Var(
                "x",
            ),
        },
        arms: [
            MatchArm {
                patterns: [
                    Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 11,
                            },
                            end: Position {
                                line: 1,
                                column: 12,
                            },
                        },
                        value: Anything,
                    },
                ],
                guard: None,
                body: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 16,
                        },
                        end: Position {
                            line: 1,
                            column: 21,
                        },
                    },
                    value: Block(
                        Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 16,
                                },
                                end: Position {
                                    line: 1,
                                    column: 21,
                                },
                            },
                            value: Block {
                                stmts: [],
                                tail: Some(
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 1,
                                                column: 18,
                                            },
                                            end: Position {
                                                line: 1,
                                                column: 19,
                                            },
                                        },
                                        value: Var(
                                            "y",
                                        ),
                                    },
                                ),
                            },
                        },
                    ),
                },
            },
        ],
    },
}
